--- a/index.html
+++ b/index.html
@@ -26,21 +26,28 @@
     <section class="gallery card">
       <h2>Gallery</h2>
       <div class="grid">
-        <figure>
-          <img src="crown-spray.jpg" alt="Spray painting the crown" />
-          <figcaption>Gradient paint test</figcaption>
-        </figure>
-        <figure>
-          <img src="dog-crown-1.jpg" alt="Dog wearing the finished crown" />
-          <figcaption>Royal model #1</figcaption>
-        </figure>
-        <figure>
-          <img src="dog-crown-2.jpg" alt="Dog with jeweled crown" />
-          <figcaption>Royal model #2</figcaption>
-        </figure>
-        <figure>
-          <img src="crown-close.jpg" alt="Close up of gemstones" />
-          <figcaption>Gem details</figcaption>
+        
+<figure>
+  <img src="IMG_2676.jpg" alt="Spray painting the crown" />
+  <figcaption>Gradient paint test</figcaption>
+</figure>
+<figure>
+  <img src="IMG_2677.jpg" alt="Dog wearing the finished crown" />
+  <figcaption>Royal model #1</figcaption>
+</figure>
+<figure>
+  <img src="IMG_2901.jpg" alt="Dog with jeweled crown" />
+  <figcaption>Royal model #2</figcaption>
+</figure>
+<figure>
+  <img src="IMG_2900.jpg" alt="Close up of gemstones" />
+  <figcaption>Gem details</figcaption>
+</figure>
+<figure>
+  <img src="IMG_2671.jpg" alt="Painting setup with spray cans" />
+  <figcaption>Painting setup</figcaption>
+</figure>
+
         </figure>
         <figure>
           <img src="painting-setup.jpg" alt="Painting setup with spray cans" />
