--- a/index.html
+++ b/index.html
@@ -26,41 +26,18 @@
     <section class="gallery card">
       <h2>Gallery</h2>
       <div class="grid">
-        
-<figure>
-  <img src="IMG_2676.jpg" alt="Spray painting the crown" />
-  <figcaption>Gradient paint test</figcaption>
-</figure>
-<figure>
-  <img src="IMG_2677.jpg" alt="Dog wearing the finished crown" />
-  <figcaption>Royal model #1</figcaption>
-</figure>
-<figure>
-  <img src="IMG_2901.jpg" alt="Dog with jeweled crown" />
-  <figcaption>Royal model #2</figcaption>
-</figure>
-<figure>
-  <img src="IMG_2900.jpg" alt="Close up of gemstones" />
-  <figcaption>Gem details</figcaption>
-</figure>
-<figure>
-  <img src="IMG_2671.jpg" alt="Painting setup with spray cans" />
-  <figcaption>Painting setup</figcaption>
-</figure>
-
-        </figure>
-        <figure>
-          <img src="painting-setup.jpg" alt="Painting setup with spray cans" />
-          <figcaption>Painting setup</figcaption>
-        </figure>
+        <figure><img src="IMG_2676.jpg" alt="Spray painting the crown"><figcaption>Gradient paint test</figcaption></figure>
+        <figure><img src="IMG_2677.jpg" alt="Dog wearing the finished crown"><figcaption>Royal model #1</figcaption></figure>
+        <figure><img src="IMG_2901.jpg" alt="Dog with jeweled crown"><figcaption>Royal model #2</figcaption></figure>
+        <figure><img src="IMG_2900.jpg" alt="Close up of gemstones"><figcaption>Gem details</figcaption></figure>
+        <figure><img src="IMG_2671.jpg" alt="Painting setup with spray cans"><figcaption>Painting setup</figcaption></figure>
       </div>
     </section>
 
     <section class="links card">
       <h2>Links</h2>
       <ul>
-        <li><a href="#" target="_blank" rel="noopener">GitHub Repo (add your link here)</a></li>
-        <li><a href="#" target="_blank" rel="noopener">Demo Video (optional)</a></li>
+        <li><a href="https://github.com/beikabeikaaaaa/Crown-Lamp" target="_blank" rel="noopener">GitHub Repo</a></li>
       </ul>
     </section>
   </main>
